--- a/app/styles/layout.less
+++ b/app/styles/layout.less
@@ -3,7 +3,6 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  overflow-x: hidden;
 }
 .Top,
 .Footer {
@@ -15,7 +14,9 @@
 .Content {
   position: relative;
   transition: all 0.3s ease-out;
-  flex: 1 1 auto;
+  flex: 1 0 auto;
+  width: 100%;
+  display: flex;
 }
 .Main {
   flex: 1 1 auto;
