uppercase all class name

--- a/app/styles/theme.less
+++ b/app/styles/theme.less
@@ -1,7 +1,7 @@
-.Top {
+.top:not([class*="bg-"]) {
   background: #ddd;
 }
-.Footer {
+.Footer:not([class*="bg-"]) {
   background: #333;
   color: #666;
 }
