--- a/app/styles/layout.less
+++ b/app/styles/layout.less
@@ -1,27 +1,27 @@
-.Wrap {
+.wrap {
   height: 100%;
   display: flex;
   position: relative;
   flex-direction: column;
 }
-.Top,
-.Footer {
+.top,
+.footer {
   flex: none;
 }
-.Top {
+.top {
   z-index: 1000;
 }
-.Content {
+.content {
   position: relative;
   transition: all 0.3s ease-out;
   flex: 1 0 auto;
   width: 100%;
   display: flex;
 }
-.Main {
+.main {
   flex: 1 1 auto;
   position: relative;
 }
-.Footer {
+.footer {
   height: @footerHeight;
 }
