--- a/app/styles/layout.less
+++ b/app/styles/layout.less
@@ -34,7 +34,7 @@ body {
   flex-direction: row;
 }
 .content {
-  flex: 1 1 0;
+  flex: 1 1 0%;
 }
 
 /**
@@ -47,7 +47,7 @@ body {
   }
   .main {
     flex-direction: column;
-    flex: 1 1 0;
+    flex: 1 1 0%;
   }
   .content {
     flex: 1 0 auto;
